--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "eadesignro/composerrepo",
   "description": "",
   "type": "magento2-module",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "autoload": {
     "files": [
       "registration.php"
@@ -25,11 +25,11 @@
   },
 
   "require": {
-    "php": "~7.0.13|~7.1.0",
-    "magento/module-backend": "100.2.*",
-    "magento/module-sales": "101.0.*",
-    "magento/framework": "101.0.*",
-    "eadesignro/module-eacore": "^0.2.9"
+    "php": "~5.6.0|7.0.2|~7.0.6|~7.1.0",
+    "magento/module-backend": "^100.1.0| ^100.2.0",
+    "magento/module-sales": "^100.1.0| ^101.0.0",
+    "magento/framework": "^100.1.0 | ^101.0.0",
+    "eadesignro/module-eacore": ">=0.2.9"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.2.0",
