--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "eadesignro/composerrepo",
   "description": "",
   "type": "magento2-module",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "autoload": {
     "files": [
       "registration.php"
@@ -25,20 +25,20 @@
   },
 
   "require": {
-    "php": "~5.6.0|7.0.2|~7.0.6|~7.1.0",
-    "magento/module-backend": "^100.1.0| ^100.2.0",
-    "magento/module-sales": "^100.1.0| ^101.0.0",
-    "magento/framework": "^100.1.0 | ^101.0.0",
-    "eadesignro/module-eacore": ">=0.2.9"
+    "php": "~5.6.0|7.0.2|~7.0.6|~7.1.0|~7.1.3|~7.2.0",
+    "magento/module-backend": "^100.1.0| ^100.2.0|101.0.*",
+    "magento/module-sales": "^100.1.0| ^101.0.0|102.0.*",
+    "magento/framework": "^100.1.0 | ^101.0.0|102.0.*",
+    "eadesignro/module-eacore": ">=0.2.6"
   },
   "require-dev": {
-    "phpunit/phpunit": "~6.2.0",
-    "squizlabs/php_codesniffer": "3.2.2",
+    "phpunit/phpunit": "~6.5.0",
+    "squizlabs/php_codesniffer": "3.3.1",
     "phpmd/phpmd": "@stable",
     "pdepend/pdepend": "2.5.2",
-    "friendsofphp/php-cs-fixer": "~2.2.1",
+    "friendsofphp/php-cs-fixer": "~2.13.0",
     "lusitanian/oauth": "~0.8.10",
-    "sebastian/phpcpd": "2.0.4"
+    "sebastian/phpcpd": "~3.0.0"
   },
   "minimum-stability": "dev",
   "prefer-stable": true
